# jni-toolbox

./: .gitignore  Cargo.toml  README.md  build.gradle
.github/workflows/: test.yml
macro/: Cargo.toml  macro.rs
macro/src/: args.rs  attrs.rs  ext.rs  lib.rs  ret.rs  wrapper.rs
src/: from_java.rs  into_java.rs  lib.rs  raw_java.rs
src/test/: Cargo.toml  test.rs
src/test/java/toolbox/: CustomException.java  Main.java
