[workspace]
members = ["macro", "src/test"]

[package]
name = "jni-toolbox"
description = "tools to make writing JNI native functions less tiresome"
repository = "https://github.com/hexedtech/jni-toolbox"
authors = [
	"alemi <me@alemi.dev>"
]
license = "GPL-3.0-only"
version = "0.1.3"
edition = "2021"

[dependencies]
#jni-toolbox-macro = "0.1.3"
jni-toolbox-macro = { path = "./macro" }
jni = "0.21"
uuid = { version = "1.10", optional = true }

[features]
default = []
uuid = ["dep:uuid"]
