[package]
name = "jni-toolbox-macro"
description = "proc macro to automate making JNI extern functions"
repository = "https://github.com/hexedtech/jni-toolbox"
authors = [
	"alemi <me@alemi.dev>"
]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "macro.rs"

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"
